--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ h1,h2,h3,h4,h5,h6,p,a {
     font-style: normal;
 }
 
-h1,h2,h3,h4,h5,h6, b {
+h1,h2,h3,h4,h5,h6, b, h2 a {
     font-family: ITCAvantGardeStd-Bold;
     font-weight: normal;
     font-style: normal;
@@ -824,6 +824,10 @@ body {
 
 #myCarousel h2 {
   color: #bec6cc;
+}
+
+h2 a:hover {
+  text-decoration: none;
 }
 
 .carousel,
