--- a/style.css
+++ b/style.css
@@ -868,6 +868,8 @@ h2.carousel-caption {
     right: 48%;
 }
 
+
+
 .scroll-dwn-button img:hover {
     content:url(assets/img/scroll-down-btn-hover.png);
 }
@@ -897,6 +899,19 @@ footer {
     margin: 10px 0;
 }
 
+
+/*-------------------------------*/
+/*      Hero image               */
+/*-------------------------------*/
+
+.hero-background {
+    height:100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    margin-top: -55px;
+}
 
 /*-------------------------------*/
 /*      Text Box Slider          */
@@ -989,6 +1004,7 @@ footer {
 #work-text p {
     font-size: 25px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 #other-work h3 {
@@ -1073,7 +1089,10 @@ footer p {
     }
     .logged-in {
 		margin-top:46px;
-	}
+	  }
+    .work-blocks img, #other-work img {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width : 480px) {
