--- a/assets/css/MyFontsWebfontsKit.css
+++ b/assets/css/MyFontsWebfontsKit.css
@@ -1,6 +1,6 @@
 /**
  * @license
- * MyFonts Webfont Build ID 2756897, 2014-02-26T19:48:55-0500
+ * MyFonts Webfont Build ID 3144927, 2015-12-22T18:38:47-0500
  * 
  * The fonts listed in this notice are subject to the End User License
  * Agreement(s) entered into by the website owner. All other parties are 
@@ -8,29 +8,33 @@
  * 
  * You may obtain a valid license at the URLs below.
  * 
- * Webfont: ITC Avant Garde Gothic Std Bold by ITC
- * URL: http://www.myfonts.com/fonts/itc/avant-garde-gothic/std-bold/
- * Copyright: Font software Copyright 1993, 1994, 2001 Adobe Systems Incorporated. Typeface designs Copyright 2005 International Typeface Corporation. All rights reserved.
+ * Webfont: AvantGardeGothicITCW01Bk by ITC
+ * URL: http://www.myfonts.com/fonts/itc/avant-garde-gothic/std-book/
+ * 
+ * Webfont: AvantGardeGothicITCW02XLt by ITC
+ * URL: http://www.myfonts.com/fonts/itc/avant-garde-gothic/std-extra-light/
+ * 
+ * Webfont: AvantGardeGothicITCW02Md by ITC
+ * URL: http://www.myfonts.com/fonts/itc/avant-garde-gothic/std-medium/
+ * 
+ * 
+ * License: http://www.myfonts.com/viewlicense?type=web&buildid=3144927
  * Licensed pageviews: 250,000
+ * Webfonts copyright: Font software Copyright 1993, 1994, 2001 Adobe Systems Incorporated. Typeface designs Copyright 2005 International Typeface Corporation. All rights reserved.
  * 
- * 
- * License: http://www.myfonts.com/viewlicense?type=web&buildid=2756897
- * 
- * © 2014 MyFonts Inc
+ * © 2015 MyFonts Inc
 */
 
 
 /* @import must be at top of file, otherwise CSS will not work */
-/*@import url("//hello.myfonts.net/count/2a1121");*/
-/* @import must be at top of file, otherwise CSS will not work */
-/*@import url("//hello.myfonts.net/count/2e2b45");*/
+@import url("//hello.myfonts.net/count/2ffcdf");
 
   
-@font-face {font-family: 'AvantGardeGothicITCW01Bd';src: url('webfonts/2E2B45_0_0.eot');src: url('webfonts/2E2B45_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2E2B45_0_0.woff2') format('woff2'),url('webfonts/2E2B45_0_0.woff') format('woff'),url('webfonts/2E2B45_0_0.ttf') format('truetype');}
+@font-face {font-family: 'AvantGardeGothicITCW01Bk';src: url('webfonts/2FFCDF_0_0.eot');src: url('webfonts/2FFCDF_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2FFCDF_0_0.woff2') format('woff2'),url('webfonts/2FFCDF_0_0.woff') format('woff'),url('webfonts/2FFCDF_0_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'AvantGardeGothicITCW02Dm';src: url('webfonts/2E2B45_1_0.eot');src: url('webfonts/2E2B45_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2E2B45_1_0.woff2') format('woff2'),url('webfonts/2E2B45_1_0.woff') format('woff'),url('webfonts/2E2B45_1_0.ttf') format('truetype');}
-
+@font-face {font-family: 'AvantGardeGothicITCW02XLt';src: url('webfonts/2FFCDF_1_0.eot');src: url('webfonts/2FFCDF_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2FFCDF_1_0.woff2') format('woff2'),url('webfonts/2FFCDF_1_0.woff') format('woff'),url('webfonts/2FFCDF_1_0.ttf') format('truetype');}
+ 
   
-@font-face {font-family: 'ITCAvantGardeStd-Bold';src: url('webfonts/2A1121_0_0.eot');src: url('webfonts/2A1121_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2A1121_0_0.woff') format('woff'),url('webfonts/2A1121_0_0.ttf') format('truetype');}
+@font-face {font-family: 'AvantGardeGothicITCW02Md';src: url('webfonts/2FFCDF_2_0.eot');src: url('webfonts/2FFCDF_2_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2FFCDF_2_0.woff2') format('woff2'),url('webfonts/2FFCDF_2_0.woff') format('woff'),url('webfonts/2FFCDF_2_0.ttf') format('truetype');}
  
